Recent tickets statuses wrap and other fixes

--- a/thinktime-fix.css
+++ b/thinktime-fix.css
@@ -14,6 +14,7 @@ LATEST FIXES
 
 22.10.2024
 ----------
+Recent tickets statuses wrap and other fixes
 Recent tickets list in "New Ticket" pop-up - gaps and text-wrap
 Task header - Smaller paddings
 Ticket detail - Left part of title - items centered
@@ -950,6 +951,19 @@ a[class^="org-tools-grid-module__orgTool--"] {
 /* Recent tickets list in "New Ticket" pop-up - gaps */
 [class^="recent-support-ticket-card-module__textWrapper--"] {
   gap: 8px;
+}
+/* Recent tickets statuses wrap and other fixes */
+[class^="recent-support-ticket-card-module__statusText--"],
+[class^="status-module__statusText--"] {
+    text-wrap: balance;
+    line-height: 1;
+    text-align: center;
+    width: min-content;
+}
+[class*=" status-module__statusMini--"] {
+    height: fit-content;
+    padding-top: 4px;
+    padding-bottom: 4px;
 }
 
 /* Post 2.17 fixes */
